--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "fast-xml-parser": "^4.5.0",
     "helmet": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
