--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fast-xml-parser": "^4.5.0",
+    "fuse.js": "^7.0.0",
     "helmet": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
