--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fast-xml-parser": "^4.5.0",
     "fuse.js": "^7.0.0",
     "helmet": "^7.1.0",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
