--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.34",
     "sass": "^1.77.8",
