--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.34",
     "sass": "^1.77.8",
