--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.1.0",
     "jszip": "^3.10.1",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^7.0.2",
