--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
+    "react-colour-wheel": "^1.0.7",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^7.0.2",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.13",
     "@types/tinycolor2": "^1.4.6"
   }
 }
